--- a/backend/package.json
+++ b/backend/package.json
@@ -1,39 +1,1 @@
-{
-  "name": "cat-pic-app",
-  "version": "1.0.0",
-  "description": "",
-  "private": true,
-  "main": "dist/server.js",
-  "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "build": "tsc -p tsconfig.json",
-    "start": "node dist/server.js",
-    "test": "vitest run",
-    "test:watch": "vitest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.17.1",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "drizzle-orm": "^0.38.0",
-    "express": "^5.2.1",
-    "helmet": "^8.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.1",
-    "redis": "^4.7.0",
-    "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.10.1",
-    "@types/jsonwebtoken": "^9.0.6",
-    "drizzle-kit": "^0.30.0",
-    "tsx": "^4.20.5",
-    "typescript": "~5.9.3",
-    "vitest": "^2.1.8"
-  }
-}
+{"name":"cat-pic-app","version":"1.0.0","description":"","private":true,"main":"dist/server.js","scripts":{"dev":"tsx watch src/server.ts","build":"tsc -p tsconfig.json","start":"node dist/server.js","test":"vitest run","test:watch":"vitest"},"keywords":[],"author":"","license":"ISC","packageManager":"pnpm@10.17.1","dependencies":{"bcrypt":"^5.1.1","cors":"^2.8.5","drizzle-orm":"^0.38.0","express":"^5.2.1","helmet":"^8.0.0","jsonwebtoken":"^9.0.2","pg":"^8.13.1","redis":"^4.7.0","zod":"^3.24.1"},"devDependencies":{"@types/bcrypt":"^5.0.2","@types/cors":"^2.8.17","@types/express":"^5.0.3","@types/node":"^24.10.1","@types/jsonwebtoken":"^9.0.6","@types/pg":"^8.11.10","drizzle-kit":"^0.30.0","tsx":"^4.20.5","typescript":"~5.9.3","vitest":"^2.1.8"}}
