feat: added fastify and read only replica for postgres. Started working on the feed on backend side.

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,12 @@ POSTGRES_DB=quotes
 # Backend auth – use a long random string in production (e.g. openssl rand -base64 32)
 JWT_SECRET=set-a-secret-at-least-32-chars
 
+# Optional – read replica for feed (if unset, feed uses primary)
+# DATABASE_READ_URL=postgres://app:password@postgres-replica:5432/quotes
+
+# Optional – connection pool size (default 10)
+# DB_POOL_MAX=20
+
 # Optional – defaults shown (override in .env if needed)
 # POSTGRES_USER=app
 # POSTGRES_DB=quotes
