--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,18 +57,9 @@ services:
     image: apache/kafka:3.7.0
     ports:
       - "${KAFKA_PORT:-9092}:9092"
-    environment:
-      KAFKA_NODE_ID: 0
-      KAFKA_PROCESS_ROLES: broker,controller
-      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 0@kafka:9093
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
-      KAFKA_LOG_DIRS: /var/kafka/data
-      KAFKA_METADATA_LOG_DIR: /var/kafka/metadata
     volumes:
       - kafka-data:/var/kafka
+      - ./docker/kafka/server.properties:/opt/kafka/config/custom/server.properties
     user: root
     entrypoint: ["/bin/bash", "-c"]
     command: >
@@ -80,12 +71,12 @@ services:
         rm -rf /var/kafka/data/* /var/kafka/metadata/* 2>/dev/null || true &&
         CLUSTER_ID=$$(cat /proc/sys/kernel/random/uuid | tr -d '-' | cut -c1-22) &&
         echo \"Using cluster ID: $$CLUSTER_ID\" &&
-        /opt/kafka/bin/kafka-storage.sh format -t $$CLUSTER_ID -c /opt/kafka/config/kraft/server.properties &&
+        /opt/kafka/bin/kafka-storage.sh format -t $$CLUSTER_ID -c /opt/kafka/config/custom/server.properties &&
         echo 'Format completed successfully'
       else
         echo 'meta.properties found, skipping format'
       fi &&
-      exec /opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/kraft/server.properties
+      exec /opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/custom/server.properties
       "
     healthcheck:
       test: ["CMD-SHELL", "/opt/kafka/bin/kafka-topics.sh --list --bootstrap-server localhost:9092 >/dev/null 2>&1 || exit 1"]
@@ -109,7 +100,7 @@ services:
       DATABASE_URL: postgres://${POSTGRES_USER:-app}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-quotes}
       DATABASE_READ_URL: postgres://${POSTGRES_USER:-app}:${POSTGRES_PASSWORD}@postgres-replica:5432/${POSTGRES_DB:-quotes}
       REDIS_URL: redis://redis:6379
-      KAFKA_BROKERS: ${KAFKA_BROKERS:-kafka:9092}
+      KAFKA_BROKERS: kafka:9092
       JWT_SECRET: ${JWT_SECRET:?Set JWT_SECRET in .env}
       CORS_ORIGINS: ${CORS_ORIGINS:-http://localhost:5173,http://localhost:3000}
     ports:
@@ -128,7 +119,7 @@ services:
 
   feed-consumer:
     build: ./backend
-    command: node dist/workers/feed-events-consumer.js
+    command: ["sh", "-c", "export KAFKA_BROKERS=kafka:9092 && exec node dist/workers/feed-events-consumer.js"]
     depends_on:
       db:
         condition: service_healthy
@@ -136,7 +127,7 @@ services:
         condition: service_healthy
     environment:
       DATABASE_URL: postgres://${POSTGRES_USER:-app}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-quotes}
-      KAFKA_BROKERS: ${KAFKA_BROKERS:-kafka:9092}
+      KAFKA_BROKERS: kafka:9092
       JWT_SECRET: ${JWT_SECRET:?Set JWT_SECRET in .env}
 
   frontend:
