feat: added back fully local system since railway deployment requires CC and im tired, enhanced UI, added data seeding

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,22 @@
-# Copy to .env and set real values. Do not commit .env.
-# On Railway, Postgres / Redis / MongoDB provide DATABASE_URL, REDIS_URL, MONGODB_URI.
+# Copy to .env and set values. Do not commit .env.
+# Fully local stack: Postgres, Redis, and MongoDB run in Docker Compose.
 
-# Required – from Railway when you add Postgres, Redis, MongoDB (or set for local dev)
-DATABASE_URL=postgres://user:password@host:5432/dbname
-REDIS_URL=redis://default:password@host:6379
-MONGODB_URI=mongodb+srv://user:password@cluster.mongodb.net/content?authSource=admin
-
-# Required – set yourself (e.g. openssl rand -base64 32)
+# Required for Docker Compose (backend gets DATABASE_URL etc. from Compose)
+POSTGRES_USER=app
+POSTGRES_PASSWORD=set-a-secure-password
+POSTGRES_DB=quotes
 JWT_SECRET=set-a-secret-at-least-32-chars
+
+# For running backend/frontend on host (not in Docker), set these to reach local containers:
+# DATABASE_URL=postgres://app:yourpassword@localhost:5432/quotes
+# REDIS_URL=redis://localhost:6379
+# MONGODB_URI=mongodb://localhost:27017/content
 
 # Optional – defaults shown
 # CORS_ORIGINS=http://localhost:5173,http://localhost:3000
 # VITE_API_BASE_URL=http://localhost:3001
 # BACKEND_PORT=3001
 # FRONTEND_PORT=3000
+# POSTGRES_PORT=5432
+# REDIS_PORT=6379
 # DB_POOL_MAX=20
