--- a/backend/package.json
+++ b/backend/package.json
@@ -1,3 +1,47 @@
-{"name":"motivational-quotes-backend","version":"1.0.0","description":"","private":true,"main":"dist/server.js","scripts":{"dev":"tsx watch src/server.ts","build":"tsc -p tsconfig.json","start":"node dist/server.js","seed":"tsx scripts/seed-quotes-from-jsonl.ts",
-    "lint":"tsc --noEmit","typecheck":"tsc --noEmit","test":"vitest run","test:watch":"vitest"},"keywords":[],"author":"","license":"ISC","packageManager":"pnpm@10.17.1","dependencies":{"@fastify/cookie":"^11.0.2","@fastify/cors":"^10.1.0","@fastify/helmet":"^12.0.1","@fastify/swagger":"^9.4.0","@fastify/swagger-ui":"^5.0.0","bcryptjs":"^2.4.3","drizzle-orm":"^0.38.4","fastify":"^5.7.4","jsonwebtoken":"^9.0.3",
-    "mongodb":"^6.12.0","pg":"^8.18.0","redis":"^4.7.1","zod":"^3.25.76"},"devDependencies":{"@types/bcryptjs":"^2.4.6","@types/jsonwebtoken":"^9.0.10","@types/node":"^24.10.12","@types/pg":"^8.16.0","drizzle-kit":"^0.30.6","tsx":"^4.21.0","typescript":"~5.9.3","vitest":"^2.1.9"}}
+{
+  "name": "motivational-quotes-backend",
+  "version": "1.0.0",
+  "description": "",
+  "private": true,
+  "main": "dist/server.js",
+  "scripts": {
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/server.js",
+    "seed": "tsx scripts/seed-quotes-from-jsonl.ts",
+    "lint": "tsc --noEmit",
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "packageManager": "pnpm@10.17.1",
+  "dependencies": {
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^10.1.0",
+    "@fastify/helmet": "^12.0.1",
+    "@fastify/swagger": "^9.4.0",
+    "@fastify/swagger-ui": "^5.0.0",
+    "bcryptjs": "^2.4.3",
+    "drizzle-orm": "^0.38.4",
+    "fastify": "^5.7.4",
+    "jsonwebtoken": "^9.0.3",
+    "mongodb": "^6.12.0",
+    "pg": "^8.18.0",
+    "redis": "^4.7.1",
+    "zod": "^3.25.76"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.10.12",
+    "@types/pg": "^8.16.0",
+    "drizzle-kit": "^0.30.6",
+    "tsx": "^4.21.0",
+    "typescript": "~5.9.3",
+    "vitest": "^2.1.9"
+  }
+}
