separate internal api and public api to different services

--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,18 @@ JWT_SECRET=set-a-secret-at-least-32-chars
 # Optional – defaults shown
 # CORS_ORIGINS=http://localhost:5173,http://localhost:3000
 # VITE_API_BASE_URL=http://localhost:3001
+# VITE_PUBLIC_API_BASE_URL=http://localhost:3002
 # BACKEND_PORT=3001
 # FRONTEND_PORT=3000
 # POSTGRES_PORT=5432
 # REDIS_PORT=6379
+# REDIS_PUBLIC_PORT=6381
 # DB_POOL_MAX=20
+
+# Public API (separate backend service, port 3002)
+# PUBLIC_API_PORT=3002
+# PUBLIC_REDIS_URL=redis://localhost:6381
+# PUBLIC_DB_POOL_MAX=10
+# DATABASE_URL_PUBLIC=  (optional read-only Postgres user)
+# MONGODB_URI_PUBLIC=   (optional read replica / read-only Mongo)
+# PUBLIC_API_BASE_URL=  (for Swagger server URL)
