feat: added better auth instead of rolling out own auth

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,8 @@
 POSTGRES_USER=app
 POSTGRES_PASSWORD=set-a-secure-password
 POSTGRES_DB=quotes
-JWT_SECRET=set-a-secret-at-least-32-chars
+BETTER_AUTH_SECRET=set-a-secret-at-least-32-chars
+BETTER_AUTH_URL=http://localhost:3001
 
 # For running backend/frontend on host (not in Docker), set these to reach local containers:
 # DATABASE_URL=postgres://app:yourpassword@localhost:5432/quotes
