--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     "start:public": "node dist/server-public.js",
     "dev:public": "tsx watch src/server-public.ts",
     "seed": "tsx scripts/seed-quotes-from-jsonl.ts",
+    "auth:generate": "pnpm dlx @better-auth/cli@latest generate",
+    "auth:migrate": "pnpm dlx @better-auth/cli@latest migrate",
     "lint": "tsc --noEmit",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
@@ -26,21 +28,18 @@
     "@fastify/helmet": "^12.0.1",
     "@fastify/swagger": "^9.4.0",
     "@fastify/swagger-ui": "^5.0.0",
-    "bcryptjs": "^2.4.3",
+    "better-auth": "^1.4.18",
     "drizzle-orm": "^0.38.4",
     "fastify": "^5.7.4",
-    "jsonwebtoken": "^9.0.3",
     "mongodb": "^6.12.0",
     "pg": "^8.18.0",
     "redis": "^4.7.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "dotenv": "^16.4.5",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.12",
     "@types/pg": "^8.16.0",
+    "dotenv": "^16.4.5",
     "drizzle-kit": "^0.30.6",
     "tsx": "^4.21.0",
     "typescript": "~5.9.3",
