--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -21,6 +21,9 @@ RUN npm install -g serve
 
 COPY --from=builder /app/dist ./dist
 
+RUN chown -R node:node /app
+USER node
+
 EXPOSE 4173
 
 CMD ["serve", "-s", "dist", "-l", "4173"]
