--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ BETTER_AUTH_URL=http://localhost:3001
 # MONGODB_URI=mongodb://localhost:27017/content
 
 # Optional – defaults shown
+# ADMIN_EMAIL=your@email.com   (if set, this user is promoted to admin on startup when no admin exists)
 # TRUST_PROXY=false  (set to true only when behind a trusted reverse proxy)
 # CORS_ORIGINS=http://localhost:5173,http://localhost:3000
 # VITE_API_BASE_URL=http://localhost:3001
