--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "start:public": "node dist/server-public.js",
     "dev:public": "tsx watch src/server-public.ts",
     "seed": "tsx scripts/seed-quotes-from-jsonl.ts",
+    "assign-admin": "tsx scripts/assign-admin.ts",
     "auth:generate": "pnpm dlx @better-auth/cli@latest generate",
     "auth:migrate": "pnpm dlx @better-auth/cli@latest migrate",
     "lint": "tsc --noEmit",
@@ -34,12 +35,12 @@
     "mongodb": "^6.12.0",
     "pg": "^8.18.0",
     "redis": "^4.7.1",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@types/node": "^24.10.12",
     "@types/pg": "^8.16.0",
-    "dotenv": "^16.4.5",
     "drizzle-kit": "^0.30.6",
     "tsx": "^4.21.0",
     "typescript": "~5.9.3",
